--- a/_posts/生活/2016-03-15-正确的电脑坐姿.md
+++ b/_posts/生活/2016-03-15-正确的电脑坐姿.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "正确的电脑坐姿"
-description: "正确的坐姿不仅对你的身体有莫大的好处，还能提高你的工作效率，赶紧从现在开始学习吧！."
+description: "正确的坐姿不仅对你的身体有莫大的好处，还能提高你的工作效率，赶紧从现在开始学习吧！"
 tags: [健康,电脑工作一族]
 categories: 生活
 ---
