--- a/_posts/开发工具/2016-03-17-测试editor对不同类型代码块的支持.md
+++ b/_posts/开发工具/2016-03-17-测试editor对不同类型代码块的支持.md
@@ -1,56 +1,54 @@
 ---
 layout: post
 title: "测试editor对不同类型代码块的支持
-description: "测试editor对不同类型代码块的支持"
+description: "测试editor工具对不同类型代码块的支持"
 tags: [editor工具]
-categories: hibernate
+categories: 工具
 ---
+
+java
 
 ```java
 String queryString = "select c from Customer c where c.name = ?1  or c.nickName = ?1";
 List customers = session.createQuery( queryString ).setParameter( "1", theNameOfInterest ).list();//注意1带有双引号("")
 ```
 
+javascript
+
 ```javascript
 String queryString = "select c from Customer c where c.name = ?1  or c.nickName = ?1";
 List customers = session.createQuery( queryString ).setParameter( "1", theNameOfInterest ).list();//注意1带有双引号("")
 ```
+
+ruby
 
 ```ruby
 String queryString = "select c from Customer c where c.name = ?1  or c.nickName = ?1";
 List customers = session.createQuery( queryString ).setParameter( "1", theNameOfInterest ).list();//注意1带有双引号("")
 ```
 
+c/cpp
+
 ```c
 String queryString = "select c from Customer c where c.name = ?1  or c.nickName = ?1";
 List customers = session.createQuery( queryString ).setParameter( "1", theNameOfInterest ).list();//注意1带有双引号("")
 ```
 
-```cpp
-String queryString = "select c from Customer c where c.name = ?1  or c.nickName = ?1";
-List customers = session.createQuery( queryString ).setParameter( "1", theNameOfInterest ).list();//注意1带有双引号("")
-```
+markdown/xml/php
 
 ```markdown
 String queryString = "select c from Customer c where c.name = ?1  or c.nickName = ?1";
 List customers = session.createQuery( queryString ).setParameter( "1", theNameOfInterest ).list();//注意1带有双引号("")
 ```
 
-```xml
-String queryString = "select c from Customer c where c.name = ?1  or c.nickName = ?1";
-List customers = session.createQuery( queryString ).setParameter( "1", theNameOfInterest ).list();//注意1带有双引号("")
-```
-
-```php
-String queryString = "select c from Customer c where c.name = ?1  or c.nickName = ?1";
-List customers = session.createQuery( queryString ).setParameter( "1", theNameOfInterest ).list();//注意1带有双引号("")
-```
+yaml
 
 ```yaml
 String queryString = "select c from Customer c where c.name = ?1  or c.nickName = ?1";
 List customers = session.createQuery( queryString ).setParameter( "1", theNameOfInterest ).list();//注意1带有双引号("")
 ```
 
+python
 
 ```python
 String queryString = "select c from Customer c where c.name = ?1  or c.nickName = ?1";
