--- a/_posts/开发工具/2016-03-17-测试editor对不同类型代码块的支持.md
+++ b/_posts/开发工具/2016-03-17-测试editor对不同类型代码块的支持.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "测试editor对不同类型代码块的支持
+title: "测试editor对不同类型代码块的支持"
 description: "测试editor工具对不同类型代码块的支持"
 tags: [editor工具]
 categories: 工具
