修改**换行到博客上会换行吗

--- a/_posts/oracle/2016-03-18-oracle开发编码规范-上.md
+++ b/_posts/oracle/2016-03-18-oracle开发编码规范-上.md
@@ -66,11 +66,14 @@ categories: oracle
 |e    |异常（EXCEPTION）|
 
 **以下是数据类型前缀命名规则的例子：**
+
 声明一全局类数值型：gn_grsxh
 声明一局部类字符型：str_name
 
-**或全部采用v_变量名（同一系统命名时只能采用两种方式中的一种）：**
-以下是采用v_变量名规则的例子：
+或全部采用v_变量名（同一系统命名时只能采用两种方式中的一种）
+
+**以下是采用v_变量名规则的例子：**
+
 声明一全局类数值型：gv_grsxh
 声明一局部类字符型：v_name
 
