目录分类样式修改

--- a/_posts/java/2016-04-11-java编码规范-上.md
+++ b/_posts/java/2016-04-11-java编码规范-上.md
@@ -2,8 +2,8 @@
 layout: post
 title: "java编码规范-上"
 description: "遵循java的编码规范开发，利人利己!本节以笔记的形式主要介绍一些开发约定和命名规范"
-tags: [java, 规范]
+tags: [java, 开发规范]
 categories: java
 ---
-
+看不清楚的，请自行放大浏览器的比例,多多见谅!
 ![](/blog/images/posts_imgs/201604110101.jpg)
