--- a/_posts/java/2016-04-11-java编码规范-上.md
+++ b/_posts/java/2016-04-11-java编码规范-上.md
@@ -53,7 +53,7 @@ class MyClass{
 
 5.不要使用只依赖于大小写来区分的名称
 
-### 包命名
+#### 包命名
 1.采用你组织的Internet域名的反转、小写形式作为包名称的根限定词，如：
 
 ` Internet domain name为sinobest.com，该包下为服务器发布包，所以完整的package名为com.sinobest.server `
@@ -62,19 +62,19 @@ class MyClass{
 
 3.只有当包的新版本仍然与旧版本兼容时，对于包的新版本使用相同的名称，否则使用新名称
 
-### 类型命名
+#### 类型命名
 1.对于类和接口名称只对每个单词的第一个字母大写。
 
-### 类命名
+#### 类命名
 1.使用名词来命名类，如：
 
 ` CustomerAccount 、KeyAdapter `
 
-### 接口命名
+#### 接口命名
 1.适应名词或形容词来命名接口，因为使用名词主要作为服务声明的描述，而使用形容词主要作为作用的描述，如：
 ` Runnable `
 
-### 方法命名
+#### 方法命名
 1.方法名词中第一个单词小写，后续的每一个单词仅第一个字母大写
 
 2.使用动词来命名方法
@@ -91,7 +91,7 @@ String getName(){
 }
 ```
 
-### 变量命名
+#### 变量命名
 1.变量名词中的第一个单词小写，后续的每一个单词仅第一个字母大写
 
 2.使用名词来命名成员变量
@@ -110,10 +110,10 @@ String getName(){
 字符串可用 s
 ```
 
-### 参数命名
+#### 参数命名
 1.当构造函数或者"set"方法想成员分配参数时，参数的命名应和成员相同
 
-### 常量命名
+#### 常量命名
 1.当命名常量时，每个单词均大写，单词之间以下划线区分
 
 
