--- a/_posts/数据结构和算法/2016-06-15-关于算法的使用.md
+++ b/_posts/数据结构和算法/2016-06-15-关于算法的使用.md
@@ -76,7 +76,7 @@ for(int i=1;i<n;i++){//执行了n+1次
 
 时间复杂度: O(N2次方)
 
-**Bubble sort不适合的情况: **
+**Bubble sort不适合的情况:**
 
 几乎所有的正常状况都不适合的情况
 
@@ -318,11 +318,11 @@ Average 情况: O(1)
 
 - 极大的数据量(几千万，几亿)
 
-### 4.常见的时间复杂度
+### 常见的时间复杂度
 
 ![时间复杂度](/blog/images/posts_imgs/201605150101.JPG)
 
-4.2算法的百度地址
+### 5.文章所提及的算法的baidu地址
 [排序算法](排序算法 http://baike.baidu.com/view/297739.htm) 、[插入排序](插入排序 http://baike.baidu.com/view/396887.htm)、[选择排序](选择排序 http://baike.baidu.com/view/547263.htm)
 
 [快速排序](快速排序 http://baike.baidu.com/view/19016.htm)、[堆排序](堆排序 http://baike.baidu.com/view/157305.htm)、[归并排序](归并排序 http://baike.baidu.com/view/90797.htm)
