--- a/_posts/数据结构和算法/2016-05-15-关于算法的使用.md
+++ b/_posts/数据结构和算法/2016-05-15-关于算法的使用.md
@@ -322,7 +322,7 @@ Average 情况: O(1)
 
 ![时间复杂度](/blog/images/posts_imgs/201605150101.JPG)
 
-### 5.文章所提及的算法的baidu地址
+### 文章所提及的算法的baidu地址
 [排序算法](排序算法 http://baike.baidu.com/view/297739.htm) 、[插入排序](插入排序 http://baike.baidu.com/view/396887.htm)、[选择排序](选择排序 http://baike.baidu.com/view/547263.htm)
 
 [快速排序](快速排序 http://baike.baidu.com/view/19016.htm)、[堆排序](堆排序 http://baike.baidu.com/view/157305.htm)、[归并排序](归并排序 http://baike.baidu.com/view/90797.htm)
