添加新文章

--- a/_posts/数据结构和算法/2016-05-15-关于算法的使用.md
+++ b/_posts/数据结构和算法/2016-05-15-关于算法的使用.md
@@ -323,13 +323,13 @@ Average 情况: O(1)
 ![时间复杂度](/blog/images/posts_imgs/201605150101.JPG)
 
 ### 文章所提及的算法的baidu地址
-[排序算法](排序算法 http://baike.baidu.com/view/297739.htm) 、[插入排序](插入排序 http://baike.baidu.com/view/396887.htm)、[选择排序](选择排序 http://baike.baidu.com/view/547263.htm)
+[排序算法](http://baike.baidu.com/view/297739.htm) 、[插入排序](http://baike.baidu.com/view/396887.htm)、[选择排序](http://baike.baidu.com/view/547263.htm)
 
-[快速排序](快速排序 http://baike.baidu.com/view/19016.htm)、[堆排序](堆排序 http://baike.baidu.com/view/157305.htm)、[归并排序](归并排序 http://baike.baidu.com/view/90797.htm)
+[快速排序](http://baike.baidu.com/view/19016.htm)、[堆排序](http://baike.baidu.com/view/157305.htm)、[归并排序](http://baike.baidu.com/view/90797.htm)
 
-[基数排序](基数排序 http://baike.baidu.com/view/1170573.htm)、[桶排序](桶排序 http://baike.baidu.com/view/1784217.htm)、[计数排序](计数排序 http://baike.baidu.com/view/1209480.htm)
+[基数排序](http://baike.baidu.com/view/1170573.htm)、[桶排序](http://baike.baidu.com/view/1784217.htm)、[计数排序](http://baike.baidu.com/view/1209480.htm)
 
-[哈希查找](哈希查找 http://baike.baidu.com/view/547281.htm)、[顺序查找](顺序查找 http://baike.baidu.com/view/499747.htm)、[二分查找](二分查找 http://baike.baidu.com/view/610605.htm)、[分块查找](分块查找 http://baike.baidu.com/view/547278.htm)
+[哈希查找](http://baike.baidu.com/view/547281.htm)、[顺序查找](http://baike.baidu.com/view/499747.htm)、[二分查找](http://baike.baidu.com/view/610605.htm)、[分块查找](http://baike.baidu.com/view/547278.htm)
 
 ### 参考资料
 
