转载一篇好的设计文档的文章

--- a/_posts/设计模式/2016-05-25-设计模式使用场景.md
+++ b/_posts/设计模式/2016-05-25-设计模式使用场景.md
@@ -4,13 +4,12 @@ title: "设计模式使用场景"
 description: "设计模式学完又忘记了?设计模式从没用过？不知道怎么用设计模式？那就快进来看看吧"
 tags: [设计模式]
 categories: 设计模式
-isOriginal: false
 ---
 
 * TOC
 {:toc}
 
-## 使用设计模式前
+## 前言
 
 - 不必刻意使用设计模式，首先还是规范好代码（推荐文章-java编码规范[^1]）
 
@@ -177,6 +176,7 @@ isOriginal: false
 2.外观模式通过一个外观接口读/写子系统中各接口的数据资源，而客户可以通过外观接口读取内部资源库，不与子系统产生交互
 
 - 已用场景
+
 1.java.util.logging.Logger类内部包含大量的其它辅助类，如果外部应用程序调用这些系统类则需要复杂的调用过程，而通过调用java.util.logging.Logger类就变得简单了。
 
 #### Proxy代理模式
@@ -215,10 +215,9 @@ isOriginal: false
 
 ### 参考资料
 
-1.好书一本：软件秘笈 设计模式那点事》
+1.好书一本：《软件秘笈 设计模式那点事》
 
-2.在知乎的一篇关于怎么用设计模式的帖子，[点击访问](http://www.zhihu.com/question/23757906
-http://blog.chinaunix.net/xmlrpc.php?r=blog/article&uid=26874207&id=4121024)
+2.在知乎的一篇关于怎么用设计模式的帖子，[点击访问](http://www.zhihu.com/question/23757906)
 
 3.说明
 
