新添加文章

--- a/_posts/设计模式/2016-05-25-设计模式使用场景.md
+++ b/_posts/设计模式/2016-05-25-设计模式使用场景.md
@@ -68,7 +68,7 @@ categories: 设计模式
 
 1.java.util.List中作为一个抽象接口工厂，iterator()接口方法返回一个迭代器接口Iterator（抽象产品），子类java.util.LinkedList、java.util.ArrayList实现了iterator()接口方法,返回具体的迭代器类型AbstractList$ListItr或AbstractList$Itr
 
-2.Object类的toString()
+2.jdk提供的jpa实现中，EntityManagerFactory 的 createEntityManager()方法可以传入不同的持久化单位创建不同的获得EntityManager对象
 
 ### 行为型
 
@@ -108,6 +108,8 @@ categories: 设计模式
 - 已用场景
 
 1.java.util.Arrays数组中的sort()方法中，底层使用mergeSort()方法（模板方法）里通过compareTo方法来比较，而compareTo是需要我们实现的
+
+2.spring的JdbcTemplate类，JdbcTemplate类通过模板设计模式帮助我们消除了冗长的代码，只做需要做的事情（即可变部分），并且帮我们做哪些固定部分，如连接的创建及关闭。
 
 #### Command命令模式
 
