新添加文章-java并发线程的使用简介

--- a/_posts/设计模式/2016-05-25-设计模式使用场景.md
+++ b/_posts/设计模式/2016-05-25-设计模式使用场景.md
@@ -2,7 +2,7 @@
 layout: post
 title: "设计模式使用场景"
 description: "设计模式学完又忘记了?设计模式从没用过？不知道怎么用设计模式？那就快进来看看吧"
-tags: [设计模式]
+tags: [设计模式，读书笔记]
 categories: 设计模式
 ---
 
@@ -214,6 +214,8 @@ categories: 设计模式
 - 已用场景
 
 1.java.io.InputStreamReader和java.io.OutputStreamWriter
+
+2.slf4j和log4j的关系，slf4j只是一个抽象层，你还需要绑定到一个实现上，这个实现就是log4j，而slf4j-log4j12充当适配器的角色负责提供slf4j-api到log4j的转换
 
 ### 参考资料
 
