转发好文章

--- a/_posts/java/2016-06-13-java并发线程使用简介.md
+++ b/_posts/java/2016-06-13-java并发线程使用简介.md
@@ -49,7 +49,7 @@ categories: java
 
 - 并发Queue
 
-主要用于生产者-消费者场景
+重点：主要用于生产者-消费者场景
 
 **LinkedBlockingQueue**：阻塞的队列，入队和出队都用了加锁，当队空的时候线程会暂时阻塞。
 
@@ -65,7 +65,7 @@ categories: java
 
 - 并发Deque
 
-线程既是一个队列的生产者又是这个队列的消费者的时候可以使用到
+重点：线程既是一个队列的生产者又是这个队列的消费者的时候可以使用到
 
 **LinkedBlockingDeque**：双端队列是一个你可以从任意一端插入或者抽取元素的队列。每个消费者都有各自的双端队列并且当一个消费者完成了自己双端队列中的全部工作，那么它可以从其它消费者双端队列的末尾秘密获取工作，极大减少了竞争。非同步的有ArrayDeque、LinkedList
 
@@ -83,7 +83,7 @@ categories: java
 
 #### 并发原子类
 
-修改方法的底层实现是通过JNI调用操作系统的原生程序
+重点：修改方法的底层实现是通过JNI调用操作系统的原生程序
 
 **AtomicBoolean**：可以用原子方式更新的 boolean 值。
 
@@ -99,7 +99,7 @@ categories: java
 
 #### Executor框架：
 
-异步执行机制,替换传统的new Thread(runnable).start()方式，使我们能够在后台执行任务；实现了线程池
+重点：异步执行机制,替换传统的new Thread(runnable).start()方式，使我们能够在后台执行任务；实现了线程池
 
 **Executors**：返回Executor、ExecutorService、ScheduledExecutorService类的实现类对象。
 
@@ -115,7 +115,7 @@ categories: java
 
 #### 同步锁
 
-提供比synchronized更灵活的锁方式，允许以三种形式（可中断、不可中断和定时）尝试获取锁，并允许以任何顺序获取和释放多个锁
+重点：提供比synchronized更灵活的锁方式，允许以三种形式（可中断、不可中断和定时）尝试获取锁，并允许以任何顺序获取和释放多个锁
 
 **ReentrantLock**：标准的互斥锁，每次最多只有一个线程能持有ReentrantLock。
 
