--- a/_posts/设计模式/2016-05-25-设计模式使用场景.md
+++ b/_posts/设计模式/2016-05-25-设计模式使用场景.md
@@ -2,7 +2,7 @@
 layout: post
 title: "设计模式使用场景"
 description: "设计模式学完又忘记了?设计模式从没用过？不知道怎么用设计模式？那就快进来看看吧"
-tags: [设计模式，读书笔记]
+tags: [设计模式,读书笔记]
 categories: 设计模式
 ---
 
