--- a/_posts/java/2016-06-13-java并发线程使用简介.md
+++ b/_posts/java/2016-06-13-java并发线程使用简介.md
@@ -37,7 +37,7 @@ categories: java
 
 使用**synchronized**同步代码块或同步方法，如：jdk的Collections.synchronizedList(List<T> list)相关方法底层就是同步方法的方式，Vector、Hashtable类的方法基本上都采用同步方法的方式。如果需要使用比同步集合拥有更好的并发性请使用并发容器。
 
-#### 并发容器：
+#### 并发容器
 
 - 并发Collection
 
@@ -97,7 +97,7 @@ categories: java
 
 **AtomicReference**：可以被原子性读和写的对象引用变量，如：String
 
-#### Executor框架：
+#### Executor框架
 
 重点：异步执行机制,替换传统的new Thread(runnable).start()方式，使我们能够在后台执行任务；实现了线程池
 
