新加文章-memcache的最佳实践

--- a/_posts/产品设计/2016-04-06-好的产品要有核心功能、口碑。对于公司很现实！.md
+++ b/_posts/产品设计/2016-04-06-好的产品要有核心功能、口碑。对于公司很现实！.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "（转）如何写好一份设计文档"
+title: "（转）好的产品要有核心功能、口碑。对于公司很现实！"
 description: "马化腾谈产品设计：核心要做到极致!"
 tags: [产品设计]
 categories: 产品
