新添加文章[数据库连接池方式]和修改文章

--- a/_posts/数据结构和算法/2016-05-15-关于算法的使用.md
+++ b/_posts/数据结构和算法/2016-05-15-关于算法的使用.md
@@ -98,8 +98,6 @@ for(int i=1;i<n;i++){//执行了n+1次
 
 - 已经快要排好的 Array 可以接近 Best 情况 O(N)
 
-- Insertion sort 有整排 array 搬移的特性
-
 ##### 3.选择排序(Selection sort)：
 
 时间复杂度: O(N2次方)
@@ -110,9 +108,7 @@ for(int i=1;i<n;i++){//执行了n+1次
 
 **Selection sort适合的情况:**
 
-- Selection 是所有排序里面 swap 次数最少的
-
-- 当 swap 代价很高的时候，例如：
+- Selection 是所有排序里面 swap 次数最少的，所以当 swap 代价很高的时候，例如：
 
    - 每次 swap 要刷新窗口或重新画图
 
@@ -138,23 +134,19 @@ for(int i=1;i<n;i++){//执行了n+1次
 
 - 需要保证稳定排序的状况
 
-- 小数据量
-
 **quick sort适合的情况:**
 
 - 绝大部分的状况
 
-- 多种编程语言提供了quick sort的方法
-
-- 只需要最大/最小的 K 个 values
+- 多种编程语言提供了quick sort的方法，如：java中Arrays.sort()对基本类型排序时如果数量大于7则就是使用快速排序
 
 ##### 5.堆排序(Heap sort)：
+
+正常情况下比基本上比 Quick sort 要慢
 
 时间复杂度: O (NlgN)
 
 **Heap sort不适合的情况:**
-
-- 正常情况下比基本上比 Quick sort 要慢
 
 - 需要保证稳定排序的状况
 
@@ -170,7 +162,7 @@ for(int i=1;i<n;i++){//执行了n+1次
 
 ##### 6.归并排序(Merge sort)
 
-对大数据量进行排序，数据量大到不能全部读进内存里，必须在内存和外存间换进换出进行排序。
+对大数据量进行排序，数据量大到不能全部读进内存里，必须在内存和外存间换进换出进行排序。Merge sort 速度仅次于 Quick sort
 
 时间复杂度： O (NlgN)
 
@@ -182,9 +174,9 @@ for(int i=1;i<n;i++){//执行了n+1次
 
 **Merge sort适合的情况:**
 
-- 需要稳定排序(Merge sort 速度仅次于 Quick sort)
+- 需要稳定排序
 
-- 本来就是要 merge 两个/多个 sorted list （有序列表）
+- 需要要 merge 两个/多个 sorted list （有序列表）
 
 - 数据量极大，内存一定不够时 ,Merge sort 可以当作外部排序，每次只读取两个 lists 的前面一小段
 
