--- a/_posts/java/2016-06-13-java并发编程使用简介.md
+++ b/_posts/java/2016-06-13-java并发编程使用简介.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "java并发线程使用简介"
+title: "java并发编程使用简介"
 description: "如果你希望能简单理解快速java.util.concurrent工具包的使用场景，请不要错过这篇文章!"
 tags: [java,并发线程]
 categories: java
