--- a/_posts/java/2016-07-30-(转)java数据库连接池配置方式.md
+++ b/_posts/java/2016-07-30-(转)java数据库连接池配置方式.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "(转)java数据库连接池配置方式"
+title: "java数据库连接池配置方式"
 description: "以下是几种配置数据库连接池的方法，这些只是常用的几种配置方法，应该还有其他方式方法，只要各位朋友肯花功夫，总能找到适合你的一种配置方式"
 tags: [数据库连接池]
 categories: java
@@ -10,7 +10,9 @@ isOriginal: false
 * TOC
 {:toc}
 
-### Tomcat配置数据源的方式
+连接池存放多个连接，连接具有指向数据库的信息，这些信息需要通过连接池配置数据源来实现
+
+### Tomcat配置连接池的方式
 
 - 方法一：在tomcat的目录conf下面的context.xml中，添加数据源的内容，该方式可用于所有项目，如下：
 
@@ -71,13 +73,13 @@ System.out.println(ds.getConnection());
 ... javax.naming.NoInitialContextException: Need to specify class name in environment or system property, or as an applet parameter, or in an application resource file:  java.naming.factory.initial
 ```
 
-### Weblogic配置数据源的方式
+### Weblogic配置连接池的方式
 
 [Weblogic 10.3 控制台方式配置Oracle连接池](http://mrxiong.blog.51cto.com/287318/696017)
 
 ### hibernate配置连接池的方式
 
-- 方式一：使用Hibernate自带的连接池(官方也只是建议仅在开发环境下使用)
+- 方式一：使用Hibernate自带的连接池(官方也只是建议仅在开发环境下使用)，需要配置数据源
 
 ```markdown
 <hibernate-configuration>
@@ -226,7 +228,7 @@ org.hibernate.dialect.MySQLDialect
 </bean>
 ```
 
-### 侵入式代码的方式
+### 侵入式代码配置连接池的方式
 
 ```java
 import  java.sql.*;
@@ -272,9 +274,9 @@ public class ConnectionPool{
 
 要获得连接池只许使用该类的静态方法setupDataSource()即可
 
-### 原文地址
+### 参考资料
 
-1. [Weblogic 10.3 配置Oracle连接池](http://mrxiong.blog.51cto.com/287318/696017)
+1. [Oracle WebLogic 10.3 连接池参数配置详解](http://lonely-521.iteye.com/blog/1720534)
 
 2. [java数据库连接池配置的几种方法](http://blog.csdn.net/puccajava/archive/2008/01/29/2071637.aspx)
 
