--- a/_posts/java/2016-07-30-(转)java数据库连接池配置方式.md
+++ b/_posts/java/2016-07-30-(转)java数据库连接池配置方式.md
@@ -106,7 +106,7 @@ jdbc:mysql://localhost:3306/feifei
 
 - 方式二： 使用配置文件指定的数据库连接池。
 
-连接池现在有dbcp、c3p0、proxoop。但Hibernate3.0中，已经不再支持dbcp了，c3p0占用内存大且效率不高，proxool是目前比较好的方式
+连接池现在有dbcp、c3p0、proxool。但Hibernate3.0中，已经不再支持dbcp了，c3p0占用内存大且效率不高，proxool是目前比较好的方式
 
 1.hibernate.cfg.xml中配置dbcp：
 
