新添文章-安全性测试

--- a/_posts/CSS/2016-06-24-CSS最佳实践.md
+++ b/_posts/CSS/2016-06-24-CSS最佳实践.md
@@ -46,14 +46,14 @@ div#container{
 
 ```css
 p{
-    text-align:left;
+    text-align:center;
 }
 ```
 
 　2.表格的td居中
 
 ```css
-<td style="text-align: left;">是否下发
+<td style="text-align: center;">是否下发
     <selectid="isXF">
         <optionvalue="y">同意</option>
         <optionvalue="n">不同意</option>
