--- a/_posts/javascript/2016-08-06-js中常用操作符的处理规则.md
+++ b/_posts/javascript/2016-08-06-js中常用操作符的处理规则.md
@@ -192,6 +192,8 @@ js的操作符能适应很多类型的值，包括：字符串、数字值、布
 
 ![加法规则](/blog/images/posts_imgs/201608060101.png)
 
+注：Date类型的对象会在二元+运算时优先调用toString()
+
 #### 减法
 
 符号：-
