新添读书笔记

--- a/_posts/java/2016-08-30-强、软、弱、虚引用的使用.md
+++ b/_posts/java/2016-08-30-强、软、弱、虚引用的使用.md
@@ -56,7 +56,7 @@ WeakHashMap的存储结构类似于HashMap，内部是通过弱键key来管理 E
 
 1. 通过System.gc()/Runtime.getRuntime().gc() 来通知JVM进行垃圾回收，但是要注意的是，虽然发出了通知，JVM不一定会立刻执行垃圾回收。
 
-2. 软引用、弱引用允许和一个引用队列联合使用，如果所引用的对象被垃圾回收，Java虚拟机就会把这个对象加入到与之关联的引用队列中。
+2. 软引用、弱引用允许和一个引用队列联合使用，如果所引用的对象被垃圾回收，Java虚拟机就会把这个对象加入到与之关联的引用队列中，以便对这些被清除的弱引用对象进行统一管理。
 
 ### 参考资料
 
