--- a/_posts/java/2016-09-03-为什么要使用SLF4J而不是Log4J.md
+++ b/_posts/java/2016-09-03-为什么要使用SLF4J而不是Log4J.md
@@ -7,15 +7,15 @@ categories: java
 isOriginal: false
 ---
 
-SLF4J不同于其他日志类库，与其它有很大的不同。SLF4J(Simple logging Facade for Java)不是一个真正的日志实现，而是一个抽象层（ [abstraction layer](http://javarevisited.blogspot.com/2010/10/abstraction-in-java.html)），它允许你在后台使用任意一个日志类库。如果是在编写供内外部都可以使用的API或者通用类库，那么你真不会希望使用你类库的客户端必须使用你选择的日志类库。
+SLF4J不同于其他日志类库，与其它有很大的不同。SLF4J(Simple logging Facade for Java)不是一个真正的日志实现，**而是一个抽象层**，它允许你在后台使用任意一个日志类库。如果是在编写供内外部都可以使用的API或者通用类库，那么你真不会希望使用你类库的客户端必须使用你选择的日志类库。
 
 如果一个项目已经使用了log4j，而你加载了一个类库，比方说 Apache Active MQ——它依赖于于另外一个日志类库logback，那么你就需要把它也加载进去。但如果Apache Active MQ使用了SLF4J，你可以继续使用你的日志类库而无语忍受加载和维护一个新的日志框架的痛苦。
 
-总的来说，SLF4J使你的代码独立于任意一个特定的日志API，这是一个对于开发API的开发者很好的思想。虽然抽象日志类库的思想已经不是新鲜的事物而且Apache commons logging也已经在使用这种思想了，但现在SLF4J正迅速成为Java世界的日志标准。让我们再看看几个使用SLF4J而不是log4j、logback或者java.util.logging的理由。
+总的来说，SLF4J使你的代码独立于任意一个特定的日志API，这是一个对于开发API的开发者很好的思想。虽然**抽象日志类库的思想**已经不是新鲜的事物而且Apache commons logging也已经在使用这种思想了，但现在SLF4J正迅速成为Java世界的日志标准。让我们再看看几个使用SLF4J而不是log4j、logback或者java.util.logging的理由。
 
 **SLF4J对比Log4J，logback和java.util.Logging的优势**
 
-正如我之前说的，在你的代码中使用SLF4J写日志语句的主要出发点是使得你的程序独立于任意特定的日志类库，依赖于特定类可能需要不同与你已有的配置，并且导致更多维护的麻烦。但除此之外，还要一个SLF4J API的特性使得我坚持使用SLF4J而抛弃我长期间钟爱的Lof4j的理由，是被称为占位符(place holder)，在代码中表示为“{}”的特性。占位符是一个非常类似于在String的format()方法中的%s，因为它会在运行时被某个提供的实际字符串所替换。这不仅降低了你代码中字符串连接次数，而且还节省了新建的String对象。即使你可能没需要那些对象，但这个依旧成立，取决于你的生产环境的日志级别，例如在DEBUG或者INFO级别的字符串连接。因为String对象是不可修改的并且它们建立在一个String池中，它们消耗堆内存( heap memory)而且大多数时间他们是不被需要的，例如当你的应用程序在生产环境以ERROR级别运行时候，一个String使用在DEBUG语句就是不被需要的。通过使用SLF4J,你可以在运行时延迟字符串的建立，这意味着只有需要的String对象才被建立。而如果你已经使用log4j，那么你已经对于在if条件中使用debug语句这种变通方案十分熟悉了，但SLF4J的占位符就比这个好用得多。
+正如我之前说的，在你的代码中使用SLF4J写日志语句的主要出发点是使得你的程序独立于任意特定的日志类库，依赖于特定类可能需要不同与你已有的配置，并且导致更多维护的麻烦。但除此之外，还要一个SLF4J API的特性使得我坚持使用SLF4J而抛弃我长期间钟爱的Lof4j的理由，是被称为**占位符(place holder)**，在代码中表示为“{}”的特性。占位符是一个非常类似于在String的format()方法中的%s，因为它会在运行时被某个提供的实际字符串所替换。这不仅降低了你代码中字符串连接次数，而且还节省了新建的String对象。即使你可能没需要那些对象，但这个依旧成立，取决于你的生产环境的日志级别，例如在DEBUG或者INFO级别的字符串连接。因为String对象是不可修改的并且它们建立在一个String池中，它们消耗堆内存( heap memory)而且大多数时间他们是不被需要的，例如当你的应用程序在生产环境以ERROR级别运行时候，一个String使用在DEBUG语句就是不被需要的。通过使用SLF4J,你可以在运行时**延迟字符串的建立**，这意味着只有需要的String对象才被建立。而如果你已经使用log4j，那么你已经对于在if条件中使用debug语句这种变通方案十分熟悉了，但SLF4J的占位符就比这个好用得多。
 
 这是你在Log4j中使用的方案，但肯定这一点都不有趣并且降低了代码可读性因为增加了不必要的繁琐重复代码(boiler-plate code)：
 
@@ -29,7 +29,7 @@ if (logger.isDebugEnabled()) {//logger是log4j的Logger
 ```java
 logger.debug("Processing trade with id: {} and symbol : {} ", id, symbol);//logger是slf4j的Logger
 ```
-在SLF4J，我们不需要字符串连接而且不会导致暂时不需要的字符串消耗。取而代之的，我们在一个以占位符和以参数传递实际值的模板格式下写日志信息。你可能会在想万一我有很个参数怎么办？嗯，那么你可以选择使用变量参数版本的日志方法或者用以Object数组传递。这是一个相当的方便和高效方法的打日志方法。记住，在生产最终日志信息的字符串之前，这个方法会检查一个特定的日志级别是不是打开了，这不仅降低了内存消耗而且预先降低了CPU去处理字符串连接命令的时间。这里是使用SLF4J日志方法的代码，来自于slf4j-log4j12-1.6.1.jar中的Log4j的适配器类Log4jLoggerAdapter。
+在SLF4J，我们不需要字符串连接而且不会导致暂时不需要的字符串消耗。取而代之的，我们在一个以占位符和以参数传递实际值的模板格式下写日志信息。你可能会在想万一我有很个参数怎么办？嗯，那么你可以选择**使用变量参数版本的日志方法或者用以Object数组传递**。这是一个相当的方便和高效方法的打日志方法。记住，在生产最终日志信息的字符串之前，这个方法会检查一个特定的日志级别是不是打开了，这不仅降低了内存消耗而且预先降低了CPU去处理字符串连接命令的时间。这里是使用SLF4J日志方法的代码，来自于slf4j-log4j12-1.6.1.jar中的Log4j的适配器类Log4jLoggerAdapter。
 
 ```java
 public void debug(String format, Object arg1, Object arg2) {
@@ -49,7 +49,7 @@ public void debug(String format, Object arg1, Object arg2) {
 *   log4j-1.2.16.jar – JAR for Log4J API
 *   slf4j-log4j12-1.6.1.jar – Log4J Adapter for SLF4J
 
-还有，如果你对于使用变量参数版本（variable argument version ）的日志方法感兴趣的话，那么就导入SLF4J 1.7的版本吧。
+还有，如果你对于使用**变量参数版本**的日志方法感兴趣的话，那么就导入SLF4J 1.7的版本吧。
 
 **总结**
 
@@ -66,18 +66,20 @@ public void debug(String format, Object arg1, Object arg2) {
 
 **提升**
 
-Log4j1.x已经被广泛应用到各个系统及框架中。然后，1.x毕竟太古老，代码很久没有更新。目前，Log4j 1.x的代码已经很难维护，因为它依赖于很多Jdk老版本的api。Log4j2在1.x上做了很大提升，如：
+Log4j1.x已经被广泛应用到各个系统及框架中。然后，1.x毕竟太古老，代码很久没有更新。目前，Log4j 1.x的代码已经很难维护，因为它依赖于很多Jdk老版本的api。而Log4j2在1.x上做了很大提升，如：
 
-1. Log4j 2使用了新一代的基于LMAX Disruptor的无锁异步日志系统。在多线程的程序中，异步日志系统吞吐量比Log4j 1.x和logback高10倍，而时间延迟却更低。
+- Log4j 2使用了新一代的基于LMAX Disruptor的无锁异步日志系统。在多线程的程序中，异步日志系统吞吐量比Log4j 1.x和logback高10倍，而时间延迟却更低。
 
-2. Log4j 2使用插件机制，更灵活。扩展appenders,Filters,Layouts,Lookups和Pattern Converters将变得更加简单，而不用去更改任何Log4j本身。
+- Log4j 2使用插件机制，更灵活。扩展appenders,Filters,Layouts,Lookups和Pattern Converters将变得更加简单，而不用去更改任何Log4j本身。
 
-3. Log4j 2在底层尽可能使用了Java5提供的对并发及锁支持的工具类。Lo4j 1.x有死锁的bug。Logback中修复了log4j 1.x的很多bug，但是，logback中的有很多类采用同步机制（这种机制导致性能下降）
+- Log4j 2在底层尽可能使用了Java5提供的对并发及锁支持的工具类。Lo4j 1.x有死锁的bug。Logback中修复了log4j 1.x的很多bug，但是，logback中的有很多类采用同步机制（这种机制导致性能下降）
 
-4. 提供了和slf4j相同的支持变量参数的占位符功能
+- 提供了和slf4j相同的支持变量参数的占位符功能
 
 ```java
 logger.debug("Hi, {} {}", u.getA(), u.getB());
 ```
 
-5. log4j 2的配置变得非常简单。支持xml和json方式配置
+- log4j 2的配置变得非常简单。支持xml和json方式配置
+
+所以建议未使用或已使用其它日志技术的可以根据项目的需要考虑替换为Log4j2。
