--- a/_posts/书架/2016-10-05-判断力_读书笔记.md
+++ b/_posts/书架/2016-10-05-判断力_读书笔记.md
@@ -93,7 +93,7 @@ categories: 书架
 
 第四步：找出一些具体可行的行动建议。
 
-![](/blog/images/posts_imgs/201610050101.png)
+![](/blog/images/posts_imgs/201610050101.jpg)
 
 **改变所提出协议的范围和粒度**，可以把问题分割成小而好操作的几部分，这样涉及的当事人也可以少些，减少冲突和增加可行性。
 
