新添文章：系统管理员

--- a/_posts/测试/2016-10-25-修复bug的7+2个步骤.md
+++ b/_posts/测试/2016-10-25-修复bug的7+2个步骤.md
@@ -8,7 +8,7 @@ categories: 测试
 
 ![](/blog/images/posts_imgs/201610250101.jpg)
 
-**1.确认bug**：仔细查阅异常报告，确定是否是个bug，找出各种有用的信息发现问题的症结，予以重现。再次检查是否与报告发生重复。如果发生重复，那看看曾经的相关人员是如何处理的。
+**1.确认bug**：仔细查阅异常报告，确定是否是个bug，找出各种有用的信息（日志或控制台的输出）发现问题的症结，予以重现。再次检查是否与报告发生重复。如果发生重复，那看看曾经的相关人员是如何处理的。
 
 **2.匹配测试环境**：需要把开发环境换成和测试出此bug的环境
 
