--- a/_posts/职场/2016-07-05-程序员的业务观.md
+++ b/_posts/职场/2016-07-05-程序员的业务观.md
@@ -4,7 +4,7 @@ title: "(转)程序员的业务观"
 description: "程序员的技术观、产品观、数据观、业务观对职场的影响"
 tags: [程序员,业务观]
 categories: 职场
-isOriginal: true
+isOriginal: false
 ---
 
 * TOC
