新添文章-svn的三个目录

--- a/_posts/java/2016-05-04-java日志记录规范.md
+++ b/_posts/java/2016-05-04-java日志记录规范.md
@@ -66,16 +66,21 @@ TRACE：更加具体的详细信息
 
 - 4.3 优化日志的信息
 
-当记录的日志量足够多的时候，如果记录的内容格式不一，杂乱无比，那么对读者来说是很难阅读的和分析的，所以记录的日志最好遵循一定的格式和包含充分的信息。
+当记录的日志量足够多的时候，如果记录的内容格式不一，杂乱无比，那么对读者来说是很难阅读的和分析的，所以记录的日志最好遵循一定的格式和包含充分的信息：
 
-```java
-ERROR: Save failure- Entity=Person, Data=[id=123 surname="Mario"] - SQLException....
-```
-而不是：
+1. 发生时间
 
-```java
-ERROR: Save failure - SQLException .....
-```
+2. 出现问题的线程
+
+3. 日志级别
+
+4. 出现问题的类文件，类的哪一行，异常栈
+
+5. 程序入参
+
+6. 相应的程序员的注释等
+
+7. 尽量输出一些「不可变的或者唯一」的信息来表示这条日志信息的唯一
 
 - 4.4 log DEBUG消息之前检查日志等级
 
@@ -99,6 +104,12 @@ logger.info(“Person name is {}“, person.getName());
 - 4.6 类中关于Logger等工具的使用
 
 在一个类中通常只使用一个Logger对象且Logger应该是Static和final的，只有在少数需要在构造函数中传递logger的情况下才使用private final。
+
+- 4.7 注意点
+
+1. 根据系统使用场景不同，对日志的侧重点就不一样。比如我们做两个系统，一个是「权限管理系统」，另外一个是「信息通知系统」，干一些发邮件，短信等的消息。前者我们需要详细的操作日志，记录「谁在某年某月某日为某人分配了什么权限」，因为审计部门需要。而后者即便发送出错了，重试或者忽略都可以考虑，甚至都不需要记录任何的日志
+
+2. 重要API、系统间交互等地方需要添加日志，因为都是监控的重点位置
 
 ### 5.谨记
 记录日志只是有效地利用日志的第一步，更重要的是如何对程序运行时产生的日志进行处理和分析，但遵循好的java日志编码规范，就能给分析带来更大的便捷和帮助。
