新添文章-linux安装

--- a/_posts/互联网/2017-02-19-程序员时间估算表.md
+++ b/_posts/互联网/2017-02-19-程序员时间估算表.md
@@ -7,7 +7,7 @@ categories: 互联网
 isOriginal: false
 ---
 
-[Programmer Time Translation Cheatsheet -or- Why Programmers Are Bad at Estimating Times](http://java.dzone.com/programmers-are-bad-estimating)
+原文出处：[Programmer Time Translation Cheatsheet -or- Why Programmers Are Bad at Estimating Times](http://java.dzone.com/programmers-are-bad-estimating)
 
 这里的时间不是指项目总的所需开发时间，而是程序员完成分配的任务需要的估算时间。
 
