新添文章-优秀到不能被忽视读书笔记

--- a/_posts/开发工具/2017-02-27-常用java工具类.md
+++ b/_posts/开发工具/2017-02-27-常用java工具类.md
@@ -6,6 +6,8 @@ tags: [java]
 categories: 工具
 ---
 
+工具类仓库地址：https://github.com/moguangquan/CodeUtil
+
 ```markdown
 ZxingEAN13EncoderHandler.java：商品码的图片生层
 
