新添文章和旧文章修改

--- a/_posts/java/2016-04-11-java编码规范-上.md
+++ b/_posts/java/2016-04-11-java编码规范-上.md
@@ -30,7 +30,7 @@ categories: java
 ```java
 class MyClass{
 ..void function(int arg){
-....if(arg<0){
+....if(arg>0){
 ......for(int index=0;index<=arg;index++){
 ........
 ......}
