--- a/_posts/java/2016-09-21-java异常的最佳实践.md
+++ b/_posts/java/2016-09-21-java异常的最佳实践.md
@@ -70,7 +70,7 @@ public void retrieveObjectById(Long id){
 
 ### 正确处理异常
 
-- 如果需要对异常进行处理，使用throw抛出异常中断程序，而不是使用e.rintStackTrace()将异常输出到控制台。而且最好使用e.rintStackTrace()打印异常堆栈信息在日志中而不是控制台
+- 如果需要对异常进行处理，使用throw抛出异常中断程序，而不是使用e.printStackTrace()将异常输出到控制台。而且最好使用e.printStackTrace()打印异常堆栈信息在日志中而不是控制台
 
 - 对可恢复的情况使用检查型异常，对编程错误使用运行时异常。
 
