--- a/_posts/书架/2017-03-10-《优秀到不能被忽视》读书笔记.md
+++ b/_posts/书架/2017-03-10-《优秀到不能被忽视》读书笔记.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "优秀到不能被忽视-读书笔记"
-description: "关于阅读《优秀到不能被忽视》书籍的笔记"
+description: "伟大的成就不在于天赋，而在于在正确的时间、正确的地点积累如此大的练习量 --格拉德威尔"
 tags: [读书笔记]
 categories: 书架
 ---
@@ -65,8 +65,6 @@ categories: 书架
 
 专注于拓展自身的能力范围并获取即时的反馈，这构成了某种更普遍适用的原理的核心。这个原理几乎在任何领域都是成功获取职场资本的关键
 
-伟大的成就不在于天赋，而在于在正确的时间、正确的地点积累如此大的练习量 --格拉德威尔
-
 **刻意练习**：一项通常由一位老师所设计的、以有效改善某一个体的某方面表现为唯一目的的活动。它要求将自身能力拓展到舒适范围以外，然后不断接收反馈。注意只有真诚的、有时甚至是犀利的反馈，才能让你知道该把注意力重新放在哪里，从而继续取得进步。
 
 只有刻意练习的终身积累能一次又一次地解释人们表现卓越的原因。换句话说，假如只是努力工作，那么你很快就会来到一个“绩效高原” 之后便无法取得任何进步。“绩效高原”是危险的，因为它会让你无法继续获取职场资本，从而削弱持续、自主地塑造职业生涯的能力。
@@ -79,9 +77,9 @@ categories: 书架
 
 1.清楚自己身处哪一种职场资本市场里打拼
 
-a.赢者通吃型：只有一种职场资本可以获取
+  a.赢者通吃型：只有一种职场资本可以获取
 
-b.拍卖型：有很多类型不同的职场资本，并且每个人都可以生成他们自己独有的资本。
+  b.拍卖型：有很多类型不同的职场资本，并且每个人都可以生成他们自己独有的资本。
 
 2.识别出自己要去追求的具体资本类型,假如你处于一个赢者通吃型市场，那么这一步无关紧要
 
@@ -97,7 +95,7 @@ b.拍卖型：有很多类型不同的职场资本，并且每个人都可以生
 
 信息结构：用有效的形式记录和体现自己努力所得的成果，如图表、数据，整理思路，用自己的话写详细总结等。
 
-#### 规则三 幸福来自于自主力
+#### 规则三：幸福来自于自主力
 
 **自主力**：对自己的工作内容和工作方式拥有发言权。这是在创建自己热爱的工作时需要靠职场资本来获取的最重要的特质之一。
 
