--- a/_posts/数据结构和算法/2016-05-15-关于算法的使用.md
+++ b/_posts/数据结构和算法/2016-05-15-关于算法的使用.md
@@ -59,7 +59,7 @@ for(int i=1;i<n;i++){//执行了n+1次
 
 最坏情况就是出现最糟糕情况的运行时间
 
-例如：查找一个有n个随机数字数组中的某个数字，最好的情况就是第一个数字，即O(n)，最坏的情况就是最后一个数字，即O(n)。
+例如：查找一个有n个随机数字数组中的某个数字，最好的情况就是第一个数字，即O(1)，最坏的情况就是最后一个数字，即O(n)。
 
 #### 稳定排序
 
