--- a/_posts/设计模式/2016-05-25-设计模式使用场景.md
+++ b/_posts/设计模式/2016-05-25-设计模式使用场景.md
@@ -87,9 +87,9 @@ categories: 设计模式
 #### Observer观察者模式
 - 使用场景
 
-1.当一个系统中一个对象的改变需要同时修改其它对象内容，但是又不知道待改变的对象到底有多少个的时候
+1.当一个系统中一个对象的改变需要同时修改其它对象内容，但是又不需要知道待改变的对象到底有多少个的时候
 
-2.当一个对象的改变必须通知其它对象作出相应的变化，但是不能确定通知的对象是谁的时候
+2.当一个对象的改变必须通知其它对象作出相应的变化，但是又不需要确定通知的对象是谁的时候
 
 - 已用场景
 
