新添文章-代码有必要做到完美吗?

--- a/_posts/开发工具/2017-05-05-protobuf序列化协议.md
+++ b/_posts/开发工具/2017-05-05-protobuf序列化协议.md
@@ -9,7 +9,7 @@ isOriginal: false
 
 这里主要比较下google protobuf协议，json,xml,java序列化相关的数据的性能
 
-```
+```java
 //Object source 序列化和反序列化的对象
 //TestCallback callback 接口，声明了序列化writeObject()和反序列化readObject()
 for (int i = 0; i < 500000; i++) {  //测试次数为500000次
