新文章-mysql的sql优化建议

--- a/_posts/oracle/2016-03-18-oracle开发编码规范-上.md
+++ b/_posts/oracle/2016-03-18-oracle开发编码规范-上.md
@@ -3,7 +3,7 @@ layout: post
 title: "oracle开发编码规范-上"
 description: "这篇oracle数据库主要介绍开发中注意的命名规范，包括对象的命名以及变量的命名规范"
 tags: [oracle, 开发规范]
-categories: oracle
+categories: 数据库
 ---
 
 * TOC
