--- a/_posts/oracle/2016-03-20-oracle开发编码规范-下.md
+++ b/_posts/oracle/2016-03-20-oracle开发编码规范-下.md
@@ -3,7 +3,7 @@ layout: post
 title: "oracle开发编码规范-下"
 description: "这篇oracle数据库主要介绍开发中常用的SQL进行优化，主要有索引优化和SQL语句的优化"
 tags: [oracle, 开发规范]
-categories: oracle
+categories: 数据库
 ---
 
 * TOC
