--- a/_posts/oracle/2016-03-19-oracle开发编码规范-中.md
+++ b/_posts/oracle/2016-03-19-oracle开发编码规范-中.md
@@ -3,7 +3,7 @@ layout: post
 title: "oracle开发编码规范-中"
 description: "这篇oracle数据库主要介绍开发中注意的程序书写规范，包括关键字的使用、注释的风格以及程序中的缩进规范"
 tags: [oracle, 开发规范]
-categories: oracle
+categories: 数据库
 ---
 
 * TOC
