新增文章-jstack的使用介绍

--- a/_posts/开发工具/2017-07-09-日志清除和备份的脚本.md
+++ b/_posts/开发工具/2017-07-09-日志清除和备份的脚本.md
@@ -6,7 +6,10 @@ tags: [shell]
 categories: 工具
 ---
 
-#### 清除本机日志并简单备份
+* TOC
+{:toc}
+
+#### 1.清除本机日志并简单备份
 
 **crontab**：每天2点执行一次
 
@@ -23,7 +26,7 @@ sleep 30
 cd ~/tomcat/webapps/crmtask/myLog/  && find ./ -mtime +3  -name "*log*"|xargs gzip
 ```
 
-#### 清除本机日志并备份到远程机器上
+#### 2.清除本机日志并备份到远程机器上
 
 **crontab**:每天2点执行一次grep.sh ,每天3点半执行一次scp_all.sh
 
