--- a/_posts/java/2017-07-17-jstack使用介绍.md
+++ b/_posts/java/2017-07-17-jstack使用介绍.md
@@ -25,8 +25,9 @@ categories: java
 
 ```markdown
 jstack 12377 > stack.log         (这里的12377可以是任意java PID)
-    ps：jstack命令必须由当前运行的java进程用户执行(即root用户)，否则会出现“12377: Operation not permitted”错误然后使用'jtgrep'脚本把这个进程号为'15417'的java线程在stack.log中抓出来：jtgrep 15417 stack.log
 ```
+
+注意：jstack命令必须由当前运行的java进程用户执行(即root用户)，否则会出现“12377: Operation not permitted”错误
 
 #### 2.jstack打印出的日志信息
 
@@ -83,7 +84,8 @@ Found one Java-level deadlock:
 =============================
   "Thread-1":
 waiting to lock monitor 0x0003f334 (object 0x22c19f18, a java.lang.Object),  which is held by "Thread-0"
-  "Thread-0":    waiting to lock monitor 0x0003f314 (object 0x22c19f20, a java.lang.Object), which is held by "Thread-1"
+  "Thread-0":
+waiting to lock monitor 0x0003f314 (object 0x22c19f20, a java.lang.Object), which is held by "Thread-1"
 ```
 
 #### 4.visualvm的远程使用的配置方式
@@ -91,7 +93,11 @@ waiting to lock monitor 0x0003f334 (object 0x22c19f18, a java.lang.Object),  whi
 tomcat/bin/catalina.sh文件,hostname改成自己Ip.
 
 ```markdown
-CATALINA_OPTS="$JAVA_OPTS -Djava.rmi.server.hostname=172.16.1.20 -Dcom.sun.management.jmxremote.port=9527 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"
+CATALINA_OPTS="$JAVA_OPTS
+	-Djava.rmi.server.hostname=172.16.1.20
+	-Dcom.sun.management.jmxremote.port=9527
+	-Dcom.sun.management.jmxremote.authenticate=false
+	-Dcom.sun.management.jmxremote.ssl=false"
 ```
 
 按照如上配置的话，在visualvm输入的第地址就是172.16.1.20:9527
