新添文章-jrebel实现weblogic热部署

--- a/_posts/开发工具/2017-05-05-protobuf序列化协议.md
+++ b/_posts/开发工具/2017-05-05-protobuf序列化协议.md
@@ -7,6 +7,18 @@ categories: 工具
 isOriginal: false
 ---
 
+**简介**
+
+protobuf ：多客户端语言支持、异构、速度快、传输字节少，但可读性不好，开发有些复杂
+
+jackson ：开发友好、跨平台、可配置可注解、效率次于protobuf,传输字节比protobuf多些
+
+Serializable ：java原生，开发简单，但不能异构，效率慢
+
+hessian ：使用简单，跨语言、传输字节少，但效率一般般，开发要注意传输的对象需实现Serializable接口
+
+**测试**
+
 这里主要比较下google protobuf协议，json,xml,java序列化相关的数据的性能
 
 ```java
@@ -65,11 +77,11 @@ new TestCallback() {
 
 3.  xml相比于java序列化来说，空间占用上有点优势，但不明显。处理时间上比java序列化多了一个数量级，在100us左右。
 
-4.  以前一种的java序列化，表现得有些失望
+4.  hessian测试有点意外，具体序列化数据上还步入json。性能上也不如jackjson，输得比较彻底。
 
-5.  hessian测试有点意外，具体序列化数据上还步入json。性能上也不如jackjson，输得比较彻底。
+5.  hessian使用压缩，虽然在字节上有20%以上的空间提升，但性能上差了4,5倍，典型的以时间换空间。总的来说还是google protobuf比较给力
 
-6.  hessian使用压缩，虽然在字节上有20%以上的空间提升，但性能上差了4,5倍，典型的以时间换空间。总的来说还是google protobuf比较给力
+6. 对性能敏感，对开发体验要求不高的内部系统选 **thrift/protobuf** ；对开发体验敏感，性能有要求的内外部系统选 **hessian2** ;对序列化后的数据要求有良好的可读性选 **jackson/gson/xml**
 
 **参考资料**
 
