--- a/_posts/互联网/2017-08-16-linux互信配置.md
+++ b/_posts/互联网/2017-08-16-linux互信配置.md
@@ -58,10 +58,24 @@ chmod 600 ~/.ssh/authorized_keys
 
 `ssh-copy-id -i ~/.ssh/id_rsa.pub "-p 2022 root@192.168.3.21" `
 
+注：如果不想安装 `ssh-copy-id` 命令的方式来实现，可以按照以下步骤操作
+
+```shell
+[root@192.168.3.20]# cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+[root@192.168.3.20]# ssh root@192.168.3.21 cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+```
+
+然后，在192.168.3.20上存了一份完整的key认证文件，我们只需要把这个目录拷贝到192.168.3.21这台机器的对应目录里去就可以了，别忘了把authorized_keys 的权限设置成600
+
+```shell
+[root@192.168.3.20]# scp ~/.ssh/authorized_keys root@192.168.3.21:~/.ssh/authorized_keys
+[root@192.168.3.20]# chmod 600 ~/.ssh/authorized_keys
+```
+
 3.到此为止，互信配置完毕，检测一下是否成功
 
 ```shell
-[root@192.168.3.20]#ssh root@192.168.3.214
+[root@192.168.3.20]#ssh root@192.168.3.21
 ```
 
 ### **3.说明：**
